<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button
            android:layout_width="102dp"
            android:layout_height="62dp" android:id="@+id/searchButton3"
            app:layout_constraintTop_toBottomOf="@+id/searchButton"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.024" app:backgroundTint="#215780"
            android:text="@string/display_button" android:onClick="displayAll"/>
    <Button
            android:layout_width="178dp"
            android:layout_height="52dp" android:id="@+id/searchButton2"
            app:layout_constraintTop_toBottomOf="@+id/editGoalName"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.467"
            app:layout_constraintVertical_bias="0.318" app:backgroundTint="#215780"
            android:text="@string/update_button" android:onClick="editProgress"/>
    <EditText
            android:layout_width="153dp"
            android:layout_height="63dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/newStatusUpdate"
            app:layout_constraintTop_toBottomOf="@+id/updateLabelText"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.806"
            app:layout_constraintVertical_bias="0.176" android:hint="@string/edit_status_label"/>
    <Button
            android:text="@string/add_button"
            android:layout_width="102dp"
            android:layout_height="62dp" android:id="@+id/addButton"
            app:layout_constraintTop_toBottomOf="@+id/goalEntry"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.297"
            app:layout_constraintVertical_bias="0.015" app:backgroundTint="#215780"
            android:onClick="addGoal"/>
    <TextView
            android:text="@string/app_title_box"
            android:layout_width="311dp"
            android:layout_height="46dp" android:id="@+id/titleText"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.049"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:gravity="center_horizontal"
            android:textColor="#263278"/>
    <EditText
            android:layout_width="226dp"
            android:layout_height="47dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/goalEntry"
            app:layout_constraintTop_toBottomOf="@+id/titleText" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintVertical_bias="0.038"
            android:hint="@string/goal_entry_hint"/>
    <Button
            android:text="@string/search_button"
            android:layout_width="102dp"
            android:layout_height="62dp" android:id="@+id/searchButton"
            app:layout_constraintTop_toBottomOf="@+id/goalEntry"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.699"
            app:layout_constraintVertical_bias="0.013" app:backgroundTint="#215780" android:onClick="findGoal"/>
    <TextView
            android:layout_width="292dp"
            android:layout_height="165dp" android:id="@+id/responseText"
            app:layout_constraintTop_toBottomOf="@+id/searchButton3"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.047" android:gravity="center_horizontal|center_vertical"
            app:layout_constraintHorizontal_bias="0.495" android:background="#33A3A3A3"/>
    <TextView
            android:text="@string/update_label"
            android:layout_width="209dp"
            android:layout_height="32dp" android:id="@+id/updateLabelText"
            app:layout_constraintTop_toBottomOf="@+id/responseText"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.095"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:gravity="center_horizontal"
            android:textColor="#263278" app:layout_constraintHorizontal_bias="0.539"/>
    <EditText
            android:layout_width="150dp"
            android:layout_height="64dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editGoalName"
            app:layout_constraintTop_toBottomOf="@+id/updateLabelText"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.134"
            app:layout_constraintVertical_bias="0.177" android:hint="@string/edit_goal_label"/>
</androidx.constraintlayout.widget.ConstraintLayout>